[package]
name = "ipld-dag-json"
version = "0.1.0"
authors = ["Irakli Gozalishvili <contact@gozala.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipld-core = { path = "../core" }
serde_json = "1.0"
serde = { version = "1.0.101", features = ["derive"] }
base64 = "0.11.0"
